css/components/row_tweet.css
[data-component~="row_tweet"] {
    border-bottom: 1px solid #EEE;
    padding-bottom: 20px;
    display: block;
}

[data-component~="row_tweet"] .original {
    display: flex;
    padding: 8px 15px;
    cursor: pointer;
    align-items: stretch;
}

[data-component~="row_tweet"] .profile {
    width: var(--profile-photo-size);
    height: var(--profile-photo-size);
    border-radius: 50%;
}

[data-component~="row_tweet"] article {
    margin-left: var(--profile-photo-margin-l);
    width: 100%;
    cursor: pointer;
    display: block;
}

[data-component~="row_tweet"] .reject {
    width: var(--profile-photo-size);
    margin-left: var(--profile-photo-margin-l);
    text-align: center;
    color: #AAA;
    background: transparent;
    border-color: transparent;
    cursor: pointer;
}

[data-component~="row_tweet"] h1 {
    font-weight: bold;
    margin: 0;
}

[data-component~="row_tweet"] .tweet {
    margin: 0;
}

[data-component~="row_tweet"] h1,
[data-component~="row_tweet"] .tweet {
    font-size: var(--font-size);
}

[data-component~="row_tweet"] .tweet {
    line-height: var(--line-height);
}

[data-component~="row_tweet"] .tiny-response img {
    width: 17px;
    height: 17px;
    display: inline-block;
    vertical-align: middle;
}

[data-component~="row_tweet"] .tiny-response p {
    font-size: var(--font-size);
    display: inline-block;
    margin: 0;
    margin-left: 0px;
}

@media (prefers-color-scheme: dark) {
    [data-component~="row_tweet"] {
        border-bottom: 1px solid #333;
    }
}

